@@ -4,6 +4,9 @@
  "http://www.freedesktop.org/standards/PolicyKit/1.0/policyconfig.dtd">
 
 <policyconfig>
+  <vendor>The GNOME Project</vendor>
+  <vendor_url>http://www.gnome.org/</vendor_url>
+  <icon_name>gnome-panel-clock</icon_name>
 
   <action id="org.gnome.clockapplet.mechanism.settimezone">
     <_description>Change system time zone</_description>
