@@ -11,7 +11,7 @@ applets/clock/clock.schemas.in
 applets/clock/clock-location.c
 applets/clock/clock-location-tile.c
 applets/clock/clock-utils.c
-applets/clock/gnome-clock-applet-mechanism.policy.in
+applets/clock/org.gnome.clockapplet.mechanism.policy.in
 applets/fish/GNOME_FishApplet.xml
 applets/fish/GNOME_FishApplet_Factory.server.in.in
 applets/fish/fish.c
