@@ -1,3 +1,7 @@
+2008-04-21  Vincent Untz  <vuntz@gnome.org>
+
+	* POTFILES.in: updated
+
 2008-04-21  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
