@@ -1,3 +1,10 @@
+2008-04-21  Vincent Untz  <vuntz@gnome.org>
+
+	* Makefile.am:
+	* gnome-clock-applet-mechanism.policy.in: rename to...
+	* org.gnome.clockapplet.mechanism.policy.in: this, and add <vendor>,
+	<vendor_url>, <icon>
+
 2008-04-16  Matthias Clasen  <mclasen@redhat.com>
 
 	* clock.glade: Change the mnemonics for the clock format radios
